--- a/xqlight/0.0.6/css/xqlight.css
+++ b/xqlight/0.0.6/css/xqlight.css
@@ -2,7 +2,7 @@
  * @Author: fegq
  * @Date: 2021-09-11 14:43:58
  * @LastEditors: fegq
- * @LastEditTime: 2021-09-11 18:44:27
+ * @LastEditTime: 2021-09-11 18:56:09
  * @Description: This is a light plugin style!
  * @Version: 0.0.6
  */
@@ -131,4 +131,15 @@
     width: 50px;
     height: 100%;
     cursor: pointer;
+  }
+
+  @media all and (max-width: 750px) and (min-width: 319px) {
+
+    .lightbox .lightbox-content .lightbox-ls {
+      width: 95%;
+      height: 60%;
+    }
+    .lightbox-name {
+      display: none;
+    }
   }
