--- a/online/0.0.1/css/online.css
+++ b/online/0.0.1/css/online.css
@@ -7,10 +7,12 @@
  * @Version: 0.0.1
  */
 
-body,p {
+body,
+p {
     margin: 0;
     padding: 0;
 }
+
 .online {
     position: fixed;
     top: -100px;
@@ -23,18 +25,22 @@ body,p {
     text-align: center;
     transition: all .5s;
 }
-.online a {
-    margin: 0 10px;
+
+.online i {
+    margin-right: 10px;
     color: #fff;
 }
+
 .online.active {
     position: relative;
     top: 0;
 }
+
 @media all and (max-width: 768px) {
     .online {
         font-size: 12px;
     }
+
     .online a {
         margin: 0 5px;
     }
